--- a/Assigment2.html
+++ b/Assigment2.html
@@ -39,7 +39,7 @@
 </form>
     
 <h1>TABLES</h1>
-<a href="http://127.0.0.1:5500/Assigement/Assigement2/Table.html">Tables</a>
+<a href="Table.html">Tables</a>
     
 </body>
 </html>
