--- a/Assigment2.html
+++ b/Assigment2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>FORMS</h1>
-    <form action="http://127.0.0.1:5500/Assigement/Assigement2/Data.html">
+    <form action="./Data.html">
        Username <input type="text" placeholder="Nmae" required><br><br>
        Email Address <input type="email" placeholder="email" required><br><br>
        Password <input type="password" placeholder="password" required><br><br>
@@ -39,7 +39,7 @@
 </form>
     
 <h1>TABLES</h1>
-<a href="Table.html">Tables</a>
+<a href="./Table.html">Tables</a>
     
 </body>
 </html>
