--- a/Assigment2.html
+++ b/Assigment2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>FORMS</h1>
-    <form action="file:///E:/ea10/Assigement/Assigement2/Data.html">
+    <form action="../Data.html">
        Username <input type="text" placeholder="Nmae" required><br><br>
        Email Address <input type="email" placeholder="email" required><br><br>
        Password <input type="password" placeholder="password" required><br><br>
